<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.intino.konos</groupId>
	<artifactId>builder</artifactId>
	<name>Builder</name>
	<version>8.0.0</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<outputDirectory>../../out/production/builder</outputDirectory>
		<testOutputDirectory>../../out/test/builder</testOutputDirectory>
		<directory>../../out/build/builder</directory>
		<resources><resource><directory>res</directory></resource></resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml
							</dependencyReducedPomLocation>
							<createDependencyReducedPom>true</createDependencyReducedPom>
							<minimizeJar>false</minimizeJar><!--important-->
							<artifactSet>
								<includes>
									<include>tara.dsl:konos:*</include>
									<include>io.intino.konos:model:*</include>
								</includes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven-releases</name>
			<url>https://artifactory.intino.io/artifactory/releases</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven-releases</name>
			<url>https://artifactory.intino.io/artifactory/release-builders</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>zip</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>configuration</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.konos</groupId>
			<artifactId>konos-builder-constants</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.konos</groupId>
			<artifactId>model</artifactId>
			<scope>compile</scope>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>tara.dsl</groupId>
			<artifactId>konos</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-codegen</artifactId>
			<version>2.1.5</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.intino.cottons</groupId>
			<artifactId>cotton-utils</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<scope>provided</scope>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>builder</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>framework</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.itrules</groupId>
			<artifactId>engine</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>bpmn-parser</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.hashids</groupId>
			<artifactId>hashids</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>
